# somoloty

./: CMakeLists.txt
include/: PCH.h  airfield.h  helpers.h  plane.h  timetable.h
src/: airfield.cpp  helpers.cpp  main.cpp  plane.cpp  timetable.cpp
